2010-09-23 Pierre Wieser <pwieser@trychlos.org>

	* m4/na-enable-manuals.m4:
	* run-autogen.sh:
	Update --enable-html-manuals and --enable-pdf-manuals options.

	* doc/nact/Makefile.am:
	Do not rebuild pdf files each time make is run.
	Have figures available when pdf are built.
	Install figures with html documents.

2010-09-04 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/Makefile.am: Fix make distcheck.

2010-09-03 Pierre Wieser <pwieser@trychlos.org>

	Declare --with-db2html and --with-gdt options.

	* Makefile.am:
	Defaut distribution includes PDF and gnome-doc-tool HTML manuals.

	* doc/nact/Makefile.am:
	* m4/na-enable-manuals.m4:
	Define --with-db2html and --with-gdt options.

	* doc/nact/Makefile.am:
	HTML and PDF installations honor --htmldir= and --pdfdir= options.

	* doc/nact/Makefile.am:
	Fix make distcheck when distributing tranlations of NACT user's manual.

	* configure.ac:
	Revert inversion of AC_CANONICAL_TARGET and	AM_INIT_AUTOMAKE.

	* src/io-desktop/nadp-writer.c (write_done_write_subitems_list):
	Improve debug messages.

	* src/nact/nact-icommand-tab.c
	(on_tab_updatable_selection_changed): Update example label.
	(parse_parameters): Cleanup code.

2010-09-02 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-reader.c (nadp_reader_iimporter_import_from_uri):
	Do not keep the imported desktop file.

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_write):
	Do not return TRUE if file has not been written due to dispose state.

	* configure.ac: Setup the package URL.

2010-08-30 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/C/nact-starting.xml: Update manual.

	* doc/nact/C/figures/read-only.png: New file.

	* doc/nact/Makefile.am: Remove '$(NULL)' expressions.

	* configure.ac: Bump version number after unstable release.

2010-08-23 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Update NEWS before unstable release.

	* src/core/na-selected-info.c
	(na_selected_info_get_list_from_item, na_selected_info_get_list_from_list):